--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-/* #root {
-  max-width: 1280px;
+ #root {
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  background-color: #3c373e;
 }
 
-.logo {
+/*.logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -40,3 +39,16 @@
 .read-the-docs {
   color: #888;
 } */
+
+.cardContent {
+  display: flex;
+  flex-direction: column;
+}
+
+.cardFormulario {
+  align-items: center;
+  width: 22rem;
+  background-color: #212529;
+  border: 10px solid #212529;
+  border-radius: 5%;
+}
